--- a/try.html
+++ b/try.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-<marquee><h6> Hiiiiii </h6></marquee>
+<marquee><h6> Hiiiiii 
+    isang malupet na code ang aking idinagdag
+</h6></marquee>
 </body>
 </html>
- 
