isang malupet ule na code ang aking ginawa

--- a/try.html
+++ b/try.html
@@ -8,6 +8,7 @@
 
 <marquee><h6> Hiiiiii 
     isang malupet na code ang aking idinagdag
+    isa uling malupet na code mula sa "ippull na file"
 </h6></marquee>
 </body>
 </html>
