try ko mag add ng file mula sa pull

--- a/try.html
+++ b/try.html
@@ -7,7 +7,7 @@
 <body>
 
 <marquee><h6> Hiiiiii 
-    isang malupet na code ang aking idinagdag
+    isang malupet na code ang aking idinagdag edi tko ulet parap malupetgit
 </h6></marquee>
 </body>
 </html>
